welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: not found: value compteur
  compteur = 0
  ^ColumnByColumn:2: error: not found: value compteur
  ecritMessage(compteur)
               ^ColumnByColumn:6: error: not found: value compteur
    compteur += 1
    ^ColumnByColumn:7: error: not found: value compteur
    ecritMessage(compteur)
                 ^